detalhes do backgrounds

--- a/app/globals.css
+++ b/app/globals.css
@@ -53,5 +53,5 @@
   background-image: url("/imgs/background-home-senai.webp");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: bottom right;
+  background-position: center right;
 }
